syntax = "proto3";

package dapplink.account;

option go_package = "./proto/account";

service WalletAccountService {
    // 发送离线签名交易 (广播)
    rpc SendTx(SendTxRequest) returns (SendTxResponse);
}

message SendTxRequest {
    string consumer_token = 1; // 可留空
    string chain = 2;          // 链名称，如: "Ethereum", "Solana", "Tron"
    string coin = 3;           // 币种符号，如: "ETH", "SOL"
    string network = 4;        // 网络环境，通常为 "mainnet" 或 "testnet"
    string raw_tx = 5;         // 核心字段：你构造好的离线签名数据 (Hex String)
}

message SendTxResponse {
    int32 code = 1;            // 1 为成功
    string msg = 2;            // 错误信息
    string tx_hash = 3;        // 广播成功后的交易哈希
}
